fix: change name of 'section' class to 'spacing' to avoid confusion

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
   padding: 10px;
 }
 
-.section {
+.spacing {
   margin: 0;
   padding: 10px;
 }
